--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="practice.css" type="text/css">
     <link rel="stylesheet" href="learning.css" type="text/css">
     <link rel="stylesheet" href="exam.css" type="text/css">
-    
+     <link rel="icon" href="assets/images/opening/homeGraphic_icon.svg" type="image/x-icon">
     <!-- javascript -->
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="util.js"></script>
